added registration support